--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ section#page-wrap{
 }
 .tab {
 	float: left;
-	width: 20%;
+	width: 18.7%;
 }
 .tab label {
 	background: #36A189; 
@@ -81,7 +81,7 @@ section#page-wrap{
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 20px;
+	padding: 2px;
 	border: 1px solid #ccc; 
 	height: inherit;
 }
@@ -146,13 +146,51 @@ form#sales fieldset{
  border-width: 2pt;
  border-radius: 15px 15px;
  text-align: right;
+ margin-bottom: 15px;
 }
-form#sales fieldset input, form#sales fieldset select{
-	background-color: rgb(116, 200, 179);
-	border: none;
-	border-bottom: 1px solid white;
-	margin-bottom: 13px;
-	width: 65%;
+form#sales table{
+	width: 98%;
+	margin-top: 15px;
+}
+form#sales table td.headerLarge{
+	width: 15%;
+}
+form#sales table td.large{
+	width: 5%;
+}
+form#sales table td.small{
+	width: 8%;
+}
+form#sales table td:first-child{
+	width: 50%;
+	min-width: 65px;
+}
+form#sales table td:last-child{
+	min-width: 75px;
+}
+form#sales input.priceTag{
+    background-color: #00B4B8;
+    color: #FFF;
+    border: 2px solid #FFF;
+    padding: 5px;
+    width: calc(100% - 20px);
+    text-align: center;
+}
+form#sales input.itemCode{
+    background-color: #00B4B8;
+    color: #FFF;
+    border: 2px solid #FFF;
+    padding: 5px;
+    width: calc(100% - 20px);
+    text-align: center;
+}
+form#sales input.quantity{
+    background-color: #00B4B8;
+    color: #FFF;
+    border: 2px solid #FFF;
+    padding: 5px;
+    width: 40px;
+    text-align: center;
 }
 /*New Sale*/
 article#newSale{
@@ -386,7 +424,7 @@ form#items fieldset article input.cancel{
 	float: right;
 }
 form#items fieldset article{
-	margin: 20px 0px 20px 20px;
+	margin: 20px 0px 20px 5px;
 	width: calc(100% - 20px);
 	height: 60px;
 }
