--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ section#page-wrap{
 }
 .tab {
 	float: left;
-	width: 18.7%;
+	width: 20%;
 }
 .tab label {
 	background: #36A189; 
@@ -154,6 +154,7 @@ form#sales table{
 }
 form#sales table td.headerLarge{
 	width: 15%;
+	text-align: center;
 }
 form#sales table td.large{
 	width: 5%;
@@ -173,7 +174,8 @@ form#sales input.priceTag{
     color: #FFF;
     border: 2px solid #FFF;
     padding: 5px;
-    width: calc(100% - 20px);
+    margin-left: 10px;
+    width: 30px;
     text-align: center;
 }
 form#sales input.itemCode{
@@ -191,6 +193,18 @@ form#sales input.quantity{
     padding: 5px;
     width: 40px;
     text-align: center;
+}
+form#sales input.weight{
+    background-color: #00B4B8;
+    color: #FFF;
+    border: 2px solid #FFF;
+    padding: 5px;
+    width: 40px;
+    text-align: center;
+}
+form#sales input.cancel{
+    margin: 0!important;
+    float: left;
 }
 /*New Sale*/
 article#newSale{
@@ -301,6 +315,14 @@ article#newSale table#newSalePurchaseTable input{
 	margin: 0!important;
 	padding: 5px;
 }
+article#newSale table#newSalePurchaseTable td:nth-child(3) input{
+	width: calc(25% - 10px)!important;
+	margin: 0!important;
+	padding: 5px;
+}
+article#newSale input.confirm{
+	margin: 0!important;
+}
 /* Customers */
 form#customers fieldset{
 	border: none;
@@ -308,28 +330,60 @@ form#customers fieldset{
 form#customers fieldset fieldset{
 	border: none;
 	overflow: hidden;
-	padding: 0px 0px 150px;
+	padding: 0px 0px 0px 10%;
 	transition: padding-bottom 0.6s ease;
 	height: 0px;
-	padding-bottom: 0px;
 }
 form#customers fieldset fieldset.acc-open{
-	padding-bottom: 190px;
+	padding-bottom: 240px;
 }
-form#customers fieldset input, form#customers fieldset select{
+form#customers fieldset fieldset input:nth-child(2), form#customers fieldset fieldset input:nth-child(3){
+	width: 45%!important;
+}
+form#customers fieldset input{
 	background-color: rgb(116, 200, 179);
 	border: none;
 	border-bottom: 1px solid white;
 	margin-bottom: 13px;
-	width: 65%;
+	width: 90%;
+}
+form#customers fieldset textarea{
+	background-color: rgb(116, 200, 179);
+	border: none;
+	border-bottom: 1px solid white;
+	margin-bottom: 13px;
+	width: calc(99% - 120px);
+	display: inline-block;
+	height: 75px;
+	resize:none;
+}
+form#customers fieldset article{
+	margin-bottom: 13px;
+	width: 120px;
+	display: inline-block;
+	vertical-align: top;
+	text-align: center;
+}
+form#customers fieldset select{
+	background-color: rgb(116, 200, 179);
+	border: none;
+	border-bottom: 1px solid white;
+	margin-bottom: 13px;
+	width: 100%;
+	vertical-align: top;
+}
+form#customers fieldset input.cancel{
+	width: 100%;
+	margin: 0!important;
 }
 form#customers fieldset fieldset legend input{
 	width: 100%;
 	border: medium none;
+	margin-left: -75%;
 }
 form#customers figure.location {
-    float: left;
     margin:0;
+    margin-right: 15px;
     background-color: #0DB6B9;
     border-radius: 50%;
     border: 2px solid white;
@@ -418,6 +472,14 @@ form#items fieldset article input.itemCode{
 	width: 60px;
 	margin-top: 10px;
 }
+form#items fieldset article input.itemPrice{
+	background-color: rgb(116, 200, 179);
+	border: none;
+	vertical-align: top;
+	float: right;
+	width: 60px;
+	margin-top: 10px;
+}
 form#items fieldset article input.cancel{
 	margin: 0px;
 	vertical-align: top;
@@ -438,7 +500,7 @@ article#newItem [type=text]{
 	margin-bottom: 15px;
 	border: 2px solid white;
 	padding: 5px;
-	width: calc(40% - 20px);
+	width: calc(25% - 30px);
 	margin: 2%;
 }
 /* Slaughters */
