--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ form#customers fieldset{
 }
 form#customers fieldset fieldset{
     border: none;
-    overflow: hidden;
+    overflow: visible;
     padding: 0px 0px 0px 10%;
     transition: padding-bottom 0.6s ease;
     height: 0px;
