--- a/css/styles.css
+++ b/css/styles.css
@@ -329,10 +329,10 @@ form#customers fieldset{
 }
 form#customers fieldset fieldset{
     border: none;
-    overflow: visible;
+    overflow: hidden;
     padding: 0px 0px 0px 10%;
     transition: padding-bottom 0.6s ease;
-    height: 0px;
+    height: 15px;
 }
 form#customers fieldset fieldset.acc-open{
     padding-bottom: 240px;
