--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,7 @@ form#customers fieldset fieldset{
     padding: 0px 0px 0px 10%;
     transition: padding-bottom 0.6s ease;
     height: 20px;
+    width: 100%;
 }
 form#customers fieldset fieldset.acc-open{
     padding-bottom: 260px;
