--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ input.cancel{
     padding: 10px;
     margin-left: 20px;
     border: 2px solid white;
+    height: 25px;
 }
 .clear{
     clear: both;
