--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,19 @@
-/* Common */
-input::-moz-placeholder {
-    color: white;
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    white;
 }
-input:-moz-placeholder {
-    color: white;
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    white;
+   opacity:  1;
 }
-input:placeholder-shown {
-    color: white;
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    white;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    white;
+}
+:placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
+  color:    white;
 }
 input.confirm{
     background-color: #69BD45!important;
