--- a/css/styles.css
+++ b/css/styles.css
@@ -232,9 +232,15 @@ form#sales input.weight{
     text-align: center;
 }
 form#sales input.cancel{
+    margin: 10px auto !important;
+    max-height: 42px;
+    width: 90%;
+}
+form#sales input.noteClear{
     margin: 10px 0 !important;
     float: left;
     max-height: 42px;
+    width: 50px;
 }
 form#sales textarea.notes {
     width: calc(99% - 80px);
