--- a/css/styles.css
+++ b/css/styles.css
@@ -340,15 +340,15 @@ article.acc-open input#newSaleTelephone{
 article.acc-open textarea#newSaleAddress{
     display: none;
 }
-/*article.acc-open select#newSaleLocationSelect{
+article.acc-open-loc select#newSaleLocationSelect{
     display: none;
 }
-article.acc-open input#newSaleAddLocationText{
+article.acc-open-loc input#newSaleAddLocationText{
     display: none;
 }
-article.acc-open input#newSaleAddLocationBtn{
+article.acc-open-loc input#newSaleAddLocationBtn{
     display: none;
-}*/
+}
 article.acc-open br.clear{
     display: none;
 }
