--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,7 @@ section#page-wrap{
     width: 100%;
     height: 100%;
     visibility: hidden;
+    display: none;
     top: 0;
     left: 0;
     z-index: 1000;
