--- a/css/styles.css
+++ b/css/styles.css
@@ -159,11 +159,8 @@ section#page-wrap{
     max-width: 630px;
     min-width: 320px;
     height: auto;
-    z-index: 2000;
-    visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
+    z-index: 20;
+    display: none;
     -webkit-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
@@ -171,28 +168,22 @@ section#page-wrap{
 }
 
 .md-show {
-    visibility: visible;
+    display: block;
 }
 
 .md-overlay {
     position: fixed;
     width: 100%;
     height: 100%;
-    visibility: hidden;
     display: none;
     top: 0;
     left: 0;
-    z-index: 1000;
-    opacity: 0;
+    z-index: 10;
     background: rgba(143,27,15,0.8);
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
 }
 
 .md-show ~ .md-overlay {
-    opacity: 1;
-    visibility: visible;
+    display: block;
 }
 
 /* Content styles */
@@ -206,14 +197,7 @@ section#page-wrap{
 
 /* Effect 12:  Just me */
 .md-effect-12 .md-content {
-    -webkit-transform: scale(0.8);
-    -moz-transform: scale(0.8);
-    -ms-transform: scale(0.8);
-    transform: scale(0.8);
-    opacity: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+    display: none;
 }
 
 .md-show.md-effect-12 ~ .md-overlay {
@@ -226,11 +210,7 @@ section#page-wrap{
 }
 
 .md-show.md-effect-12 .md-content {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
+    display: block;
 }
 /*
 *   Push Menu
@@ -272,7 +252,7 @@ section#page-wrap{
     width: 240px;
     height: 100%;
     top: 0;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .cbp-spmenu-vertical a {
@@ -284,7 +264,7 @@ section#page-wrap{
     width: 100%;
     height: 150px;
     left: 0;
-    z-index: 1000;
+    z-index: 10;
     overflow: hidden;
 }
 
