--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,6 @@ select:-moz-focusring {
     color: transparent;
     text-shadow: 0 0 0 #000;
 }
-body{
-    transform: translate3d(0,0,0);
-}
 input.confirm{
     background-color: #69BD45!important;
     margin-top: 25x!important;
@@ -159,8 +156,11 @@ section#page-wrap{
     max-width: 630px;
     min-width: 320px;
     height: auto;
-    z-index: 20;
-    display: none;
+    z-index: 2000;
+    visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
     -webkit-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
@@ -168,22 +168,28 @@ section#page-wrap{
 }
 
 .md-show {
-    display: block;
+    visibility: visible;
 }
 
 .md-overlay {
     position: fixed;
     width: 100%;
     height: 100%;
+    visibility: hidden;
     display: none;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 1000;
+    opacity: 0;
     background: rgba(143,27,15,0.8);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .md-show ~ .md-overlay {
-    display: block;
+    opacity: 1;
+    visibility: visible;
 }
 
 /* Content styles */
@@ -197,7 +203,14 @@ section#page-wrap{
 
 /* Effect 12:  Just me */
 .md-effect-12 .md-content {
-    display: none;
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .md-show.md-effect-12 ~ .md-overlay {
@@ -210,13 +223,17 @@ section#page-wrap{
 }
 
 .md-show.md-effect-12 .md-content {
-    display: block;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
 }
 /*
 *   Push Menu
 */
 /* General styles for all menus */
-.cbp-spmenu {
+/*.cbp-spmenu {
     background: #47a3da;
     position: fixed;
 }
@@ -252,7 +269,7 @@ section#page-wrap{
     width: 240px;
     height: 100%;
     top: 0;
-    z-index: 10;
+    z-index: 1000;
 }
 
 .cbp-spmenu-vertical a {
@@ -264,7 +281,7 @@ section#page-wrap{
     width: 100%;
     height: 150px;
     left: 0;
-    z-index: 10;
+    z-index: 1000;
     overflow: hidden;
 }
 
@@ -380,7 +397,7 @@ section#page-wrap{
     .cbp-spmenu-push-toright {
         left: 190px;
     }
-}
+}*/
 
 /*
 *   Views
