--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,6 @@ section#page-wrap{
     width: 100%;
     height: 100%;
     visibility: hidden;
-    display: none;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -233,7 +232,7 @@ section#page-wrap{
 *   Push Menu
 */
 /* General styles for all menus */
-/*.cbp-spmenu {
+.cbp-spmenu {
     background: #47a3da;
     position: fixed;
 }
@@ -397,7 +396,7 @@ section#page-wrap{
     .cbp-spmenu-push-toright {
         left: 190px;
     }
-}*/
+}
 
 /*
 *   Views
