--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,12 @@ section#page-wrap{
     border-bottom: 1px solid white;
     margin-bottom: 13px;
 }
+input {
+  left: 0;
+  position: relative;
+  border-radius: 10px;
+}
+
 .header{
     font-size: large;
 }
@@ -102,7 +108,7 @@ section#page-wrap{
 .tab:last-child label {
     background: #00B4B8; 
 }
-.tab [type=radio] {
+.tab > [type=radio] {
     display: none;   
 }
 .tab label img {
@@ -120,17 +126,17 @@ section#page-wrap{
     border: 1px solid #ccc; 
     height: inherit;
 }
-[type=radio]:checked ~ label {
+.tab > [type=radio]:checked ~ label {
     background: #025C47;
     border-bottom: 1px solid white;
     z-index: 2;
 }
-.tab:last-child [type=radio]:checked ~ label {
+.tab:last-child > [type=radio]:checked ~ label {
     background: #025C47;
     border-bottom: 1px solid white;
     z-index: 2;
 }
-[type=radio]:checked ~ label ~ .content {
+.tab > [type=radio]:checked ~ label ~ .content {
     z-index: 1;
 }
 .content {
@@ -145,10 +151,10 @@ section#page-wrap{
     -ms-transition:     all 0.6s ease;
     -o-transition:      all 0.6s ease;
 }
-[type=radio]:checked ~ label ~ .content {
+.tab > [type=radio]:checked ~ label ~ .content {
       z-index: 1;
 }
-[type=radio]:checked ~ label ~ .content {
+.tab > [type=radio]:checked ~ label ~ .content {
     opacity: 1;
     -webkit-transform: translateX(0);
     -moz-transform:    translateX(0);
