--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ section#page-wrap{
     margin: 15px 15px 20px;
     background-color: rgb(116, 200, 179);
     border: none;
-    border: 2px solid white!important;
+    border-bottom: 1px solid white!important;
     margin-bottom: 13px;
 }
 article.sales{
